overflow-x fix, png compression

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,7 @@ body {
     .sections-wrapper {
         background: $color2;
         text-align: center;
+        overflow-x:hidden;
     }
 
     section.title {
@@ -79,7 +80,6 @@ body {
     section.book {
         text-align: center;
         background-color: $color2;
-        overflow-x: hidden;
 
         img {
             margin-left: 160px;
@@ -98,8 +98,6 @@ body {
 
             position: relative;
             left: 80px;
-
-            overflow-x:visible;
 
             img {
                 max-width:100%;
